<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textField"
        app:layout_constraintBottom_toBottomOf="@id/textField"
        android:contentDescription="@string/store_icon"
        />

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textField"
          android:layout_marginTop="10dp"
          android:layout_width="180dp"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:hint="@string/cost_of_service"
          android:layout_marginStart="32dp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          app:prefixText="₹"
         >
          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:id="@+id/costOfService"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="@id/textField"
              android:inputType="numberDecimal"
              />
      </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:id="@+id/service_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="italic"
            android:fontFamily="casual"
            android:textAppearance="?attr/textAppearanceBody1"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField"
        />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/service_question"
            app:layout_constraintBottom_toBottomOf="@id/service_question"
            android:src="@drawable/ic_service_question"

            />

        <RadioGroup
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:id="@+id/tipOption"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_question"
            android:checkedButton="@id/fifteen"
            android:orientation="vertical"
            >

            <RadioButton
                android:id="@+id/twenty"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/twenty_p"
                />
            <RadioButton
                android:id="@+id/fifteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifteen_p"
                />
            <RadioButton
                android:id="@+id/ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_p"
                />

        </RadioGroup>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/round_up"
            app:layout_constraintBottom_toBottomOf="@id/round_up"
            />
        <androidx.appcompat.widget.SwitchCompat
            android:layout_marginTop="4dp"
            android:layout_marginStart="30dp"
            android:id="@+id/round_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipOption"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/round_up_the_tip"
            />

        <Button
            android:id="@+id/cal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_message"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/round_up"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />


        <TextView
            android:layout_marginTop="14dp"
            android:textSize="16sp"
            android:id="@+id/tipResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cal_button"
            android:text="@string/tip_amount"
            />
</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>